--- a/gb/17/7/13/n9393043.md
+++ b/gb/17/7/13/n9393043.md
@@ -1,35 +1,35 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共对知识分子的欺骗（3）文革巨难</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2017年07月14日讯】1949年，物理学家、留美博士饶毓泰先生，拒绝了南京政府的邀请，没有登上为著名教授安排的前去台湾的专机。他选择继续留在北大执教。</p>
+	<p>【大纪元2017年07月14日讯】1949年，物理学家、留美博士饶毓泰先生，拒绝了南京政府的邀请，没有登上为著名教授安排的前去台湾的专机。他选择继续留在北大执教。</p>
 <p>1956年，留美博士、力学家、计算数学家董铁宝携妻儿绕道欧洲、历时3个月回到中国，受聘于北京大学。当时北大校刊96期做了报导，写道：“本学期开学以来，共有7位教师，冲破种种阻挠，从资本主义国家归国到北大工作。他们是……力学博士董铁宝和夫人植物生理学硕士梅镇安，……”</p>
 <p>1968年10月16日，在 “清理阶级队伍”的运动中，饶毓泰不堪折磨和迫害，在校内自杀身亡。</p>
 <p>1968年10月18日，董铁宝上吊身亡。这位中国计算机研制的先驱之一，被打成了“美国特务”、遭隔离审查。那天晚上，他离开了关押他的大楼，结束了自己的生命。</p>
-<p>一场十年“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E5%A4%A7%E9%9D%A9%E5%91%BD.md#1">文化大革命</a>”，吞噬了多少大陆的科技和文化精英。当年，这些才华横溢的名流才俊，轻信了中共的宣传鼓惑，对红色政党心生幻想，对“新”中国充满期望。然而，在无情的政治风浪中，他们不仅报国梦碎，而且坠入了无边的黑暗之中。</p>
-<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E2%80%9C%E6%96%87%E9%9D%A9%E2%80%9D.md#1">“文革”</a>是中共发动的最大的政治运动，灾难空前。在这场运动中，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%9F%A5%E8%AF%86%E5%88%86%E5%AD%90.md#1">知识分子</a>再一次首当其冲，成为第一波受难者，遭遇灭顶之灾。毛泽东号召“破四旧，立四新”，“横扫一切牛鬼蛇神”，于是，中国的传统文化，从表层的器物、古迹，到深层的精神、信仰，被彻底砸碎、摧毁。中共的谎言、暴力、强迫式思想改造，重创文化精英的肉体和灵魂，也给中华文化带来了毁灭性的打击。</p>
+<p>一场十年“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E5%A4%A7%E9%9D%A9%E5%91%BD.md#1">文化大革命</a>”，吞噬了多少大陆的科技和文化精英。当年，这些才华横溢的名流才俊，轻信了中共的宣传鼓惑，对红色政党心生幻想，对“新”中国充满期望。然而，在无情的政治风浪中，他们不仅报国梦碎，而且坠入了无边的黑暗之中。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E2%80%9C%E6%96%87%E9%9D%A9%E2%80%9D.md#1">“文革”</a>是中共发动的最大的政治运动，灾难空前。在这场运动中，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%9F%A5%E8%AF%86%E5%88%86%E5%AD%90.md#1">知识分子</a>再一次首当其冲，成为第一波受难者，遭遇灭顶之灾。毛泽东号召“破四旧，立四新”，“横扫一切牛鬼蛇神”，于是，中国的传统文化，从表层的器物、古迹，到深层的精神、信仰，被彻底砸碎、摧毁。中共的谎言、暴力、强迫式思想改造，重创文化精英的肉体和灵魂，也给中华文化带来了毁灭性的打击。</p>
 <h2><strong>灭顶之灾</strong></h2>
-<p>1966年5月16日，中共中央政治局扩大会议发出了“516”通知，把阶级斗争的矛头直指学术界、教育界、新闻界、文艺界等文化领域，标志着<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E5%A4%A7%E9%9D%A9%E5%91%BD.md#1">文化大革命</a>正式开始。通知说：“彻底揭露那批反党反社会主义的所谓‘学术权威’的资产阶级反动立场，彻底批判学术界、教育界、新闻界、文艺界、出版界的资产阶级反动思想，夺取在这些文化领域中的领导权。”</p>
+<p>1966年5月16日，中共中央政治局扩大会议发出了“516”通知，把阶级斗争的矛头直指学术界、教育界、新闻界、文艺界等文化领域，标志着<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E5%A4%A7%E9%9D%A9%E5%91%BD.md#1">文化大革命</a>正式开始。通知说：“彻底揭露那批反党反社会主义的所谓‘学术权威’的资产阶级反动立场，彻底批判学术界、教育界、新闻界、文艺界、出版界的资产阶级反动思想，夺取在这些文化领域中的领导权。”</p>
 <p>1966年6月初，文革的旋风席卷了北京校园。6月1日晚，中央人民广播电台广播了北京大学聂元梓等人写的被毛泽东称为“全国第一张马列主义的大字报”，这张大字报攻击北京大学的负责人，还号召“坚决彻底消灭一切牛鬼蛇神”。</p>
 <p>1966年8月，北京的红卫兵挥舞棍棒，在一个月内打死了1772人，其中包括许多中学、大学的校领导和教师。“红小将”的暴力，得到了领袖的默许；“红八月”的得名，浸透着血腥和暴力。</p>
-<p>“无产阶级的革命号令”响起，讨伐<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%9F%A5%E8%AF%86%E5%88%86%E5%AD%90.md#1">知识分子</a>的运动在全国展开。知识分子阶层被中共明确列入专政对象的清单，称作“臭老九”（其它8类专政对象是：叛徒、特务、走资派和地、富、反、坏、右）。惨烈的迫害轮番上演：口诛笔伐，批斗毒打，羞辱栽赃，下放改造。这些残酷的折磨令大批知识分子如堕深渊。他们百口莫辩，众叛亲离，无语问天。</p>
-<p>单少杰在《毛泽东执政春秋》中描述了知识分子在<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E2%80%9C%E6%96%87%E9%9D%A9%E2%80%9D.md#1">“文革”</a>中的悲惨境地：“不论是‘造反派’还是‘保守派’，在批斗所谓‘反党反社会主义’的名学者、名教授、名作家的问题上，都是不遗余力的。即使在那些后来也被打倒的学校领导中，也有相当一部分人曾积极领导过或参与过对后者的整治，有意无意地把这场突如其来的大火从自己身边引开，引向那些既无任何党派庇护又无自我保护能力的知识分子身上。”</p>
+<p>“无产阶级的革命号令”响起，讨伐<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%9F%A5%E8%AF%86%E5%88%86%E5%AD%90.md#1">知识分子</a>的运动在全国展开。知识分子阶层被中共明确列入专政对象的清单，称作“臭老九”（其它8类专政对象是：叛徒、特务、走资派和地、富、反、坏、右）。惨烈的迫害轮番上演：口诛笔伐，批斗毒打，羞辱栽赃，下放改造。这些残酷的折磨令大批知识分子如堕深渊。他们百口莫辩，众叛亲离，无语问天。</p>
+<p>单少杰在《毛泽东执政春秋》中描述了知识分子在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E2%80%9C%E6%96%87%E9%9D%A9%E2%80%9D.md#1">“文革”</a>中的悲惨境地：“不论是‘造反派’还是‘保守派’，在批斗所谓‘反党反社会主义’的名学者、名教授、名作家的问题上，都是不遗余力的。即使在那些后来也被打倒的学校领导中，也有相当一部分人曾积极领导过或参与过对后者的整治，有意无意地把这场突如其来的大火从自己身边引开，引向那些既无任何党派庇护又无自我保护能力的知识分子身上。”</p>
 <p>“几乎所有‘学术权威’都受到严厉批判，其中一些人还被戴上高帽子、挂上黑牌子，被罚站、被罚跪，任人打骂、任人羞辱。几乎什么人都可以来羞辱知识分子，尤其可以来羞辱大知识分子。心术不正者可以喊出‘知识越多越反动’的口号，目不识丁者可以喊出‘知识越多越愚蠢’的口号，甚至知识分子自己也整起自己来。”</p>
 <p>据单少杰记述，北京一所大学的一位老教师告诉他，在整“反动学术权威”最厉害的那段时间里，就有好几位教授从正对着这位教师家的一幢高楼上跳下来。“他亲眼目睹了这些学术名流尸横水泥地面的惨状和尸体旁的标语：‘自绝于人民，死有余辜！’”</p>
 <p>仅以北京大学为例，那里被关、被打的“反动学术权威”多达500多人，自杀的著名教授就有24人。上海市在1968年至1969年文革“清理阶级队伍”运动中，饱受侮辱和折磨自杀的有10,000多人。有学者研究认为，“文革”初期就有20多万人自杀，其中知识界人士占相当的比例。</p>
 <p>1970年12月18日，毛泽东接见美国记者斯诺，在谈话中炫耀：对于大学教授、中学教师、小学教员，“文化大革命就是从他们开刀”。</p>
 <p>王来棣在《毛泽东的知识分子政策》中评说：“文革”时期是毛泽东一生敌视知识分子情绪的一次最彻底、最疯狂的发泄。</p>
-<figure id="attachment_9393159" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-9393159" src="https://i.epochtimes.com/assets/uploads/2017/07/9af7f21941498389c3bc2357788bde67-450x300.jpg" alt="在文革期间，骨肉相残，亲友反目，师生互斗的悲剧十分普遍。（网络图片）" width="450" b="300" /><figcaption class="wp-caption-text">在文革期间，骨肉相残，亲友反目，师生互斗的悲剧十分普遍。（网络图片）</figcaption></figure>
+<figure id="attachment_9393159" aria-describedby="caption-attachment-9393159" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/07/9af7f21941498389c3bc2357788bde67-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-9393159" src="https://i.epochtimes.com/assets/uploads/2017/07/9af7f21941498389c3bc2357788bde67-450x300.jpg" alt="在文革期间，骨肉相残，亲友反目，师生互斗的悲剧十分普遍。（网络图片）" width="450" b="300" /></a><figcaption id="caption-attachment-9393159" class="wp-caption-text">在文革期间，骨肉相残，亲友反目，师生互斗的悲剧十分普遍。（网络图片）</figcaption></figure>
 <h2><strong>梦断家国</strong></h2>
 <p>中共在夺权建政的过程中，依靠谎言和欺骗获取了许多党内和党外知识分子的支持帮助。他们有的放弃了优越的生活，从海外归国；有的拒绝了前往台湾的机票，义无反顾要为建设“新中国”效力。但是，中共领导人深知，中共的集团利益与知识界的自由理想不可兼容。对于知识分子，中共始终心怀仇视，这种态度，源自其对于传统文化的恐惧。因此，在中共的统治下，知识分子的命运始终摆脱不掉悲剧的色彩。</p>
 <p>文革飓风里，梦想破灭、生命骤逝的故事，上演了千重万回。</p>
 <p>著名翻译家傅雷夫妇之“士可杀，不可辱”的结局，是文革历史中异常凄凉的一笔。傅雷本是个体制外的文人，在书房内静静地翻译著书，却被卷进一场又一场政治运动。他曾经努力地“跟党走”，试图跟上“反右”浪潮，自己却被戴上了右派的帽子。文革风起后，居委会和红卫兵都上门抄家，不仅没收了他的藏品和生活用品，还查到了荒唐的“反党罪证”。1966年9月2日，傅雷夫妇被拉到大门口，站在长板凳上，戴上高帽子示众，周围是“打倒傅雷”的大字报。9月3日，傅雷夫妇上吊自尽。</p>
 <p>在《重看傅雷之死：体制外生存艰难 被批斗对生存绝望》中，作者（未署名）分析了傅雷的绝望心态。</p>
 <p>“在政治运动中，他彻底迷失了方向。反对政治运动，他将被政治运动碾碎；支持政治运动，他同样难以幸免于难。在这种情况下，他完全不知道该怎么办。站在时代洪流的风口浪尖，傅雷彷徨无奈，向左走是死路，向右走仿佛早晚要死，原地不动好像也无活路。不能说话也不能沉默，那么剩下的只能是‘自决于人民’了，这也是傅雷夫妇的最终抉择。”</p>
-<figure id="attachment_9393125" style="width: 414px" class="wp-caption aligncenter"><img class="size-full wp-image-9393125" src="https://i.epochtimes.com/assets/uploads/2017/07/b65a3cfcf1d8e85de180dc9c3dce2818.jpg" alt="傅雷遗书（网路图片）" width="414" b="288" /><figcaption class="wp-caption-text">傅雷遗书（网路图片）</figcaption></figure>
+<figure id="attachment_9393125" aria-describedby="caption-attachment-9393125" style="width: 414px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/07/b65a3cfcf1d8e85de180dc9c3dce2818.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-full wp-image-9393125" src="https://i.epochtimes.com/assets/uploads/2017/07/b65a3cfcf1d8e85de180dc9c3dce2818.jpg" alt="傅雷遗书（网路图片）" width="414" b="288" /></a><figcaption id="caption-attachment-9393125" class="wp-caption-text">傅雷遗书（网路图片）</figcaption></figure>
 <p>上海交响乐团指挥陆洪恩，是在文革中被处死的第一个高级知识分子。一位音乐艺术家，只因为在会上直言说，赫鲁晓夫反对斯大林主义没有错，就被当作“反革命”关进监狱。陆洪恩多次被在“斗争会”上被侮辱和毒打，最后，他被以“现行反革命”罪判处死刑、执行枪决，既无审判过程也无上诉手续。</p>
 <p>陆洪恩被拘捕后，他的妻子和儿子都受到株连。16岁的儿子陆于为被发配新疆，十三年后，陆洪恩“平反”，其子才获准返回上海。他说，父亲没有留下骨灰、遗书，所有音乐手稿被抄，上海交响乐团就交给他一根陆洪恩用过的指挥棒。</p>
 <p>沈元，1955年中国高考文科状元，历史学界的奇才。在反右运动中，沈元被划为“极右分子”，几经沉浮。文革期间，事业渐有起色、组建了家庭的沈元和妻子被红卫兵扫地出门，走投无路，四处躲藏。沈元后铤而走险，闯入某外国驻华使馆，欲求庇护不得。1970年4月18日，沈元以“反革命叛国罪”被枪决，时年32岁。</p>
@@ -58,51 +58,46 @@
 <li>王友琴：《中国知识分子的四个S》 ＃</li>
 </ul>
 <p>责任编辑：高义</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/6/28/n9329041.md#1">文革中红卫兵折磨死多少北京老师？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/3/12/n8902587.md#1">王友琴：六十三名受难者和北大文革（下）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/3/12/n8901817.md#1">王友琴：六十三名受难者和北大文革（上）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/3/5/n8875345.md#1">王友琴：曾在芝加哥大学留学的五名文革受难者（上）</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/12/6/n8562956.md#1">纪念万里诞辰百年会上  习近平再否定文革</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/8/26/n8237870.md#1">郑义：在文革50周年反思研讨会上的两次发言</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/6/10/n7983735.md#1">潘晴：文革红黑俱受毒害 后悔批父亲砸教授</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/6/6/n7969083.md#1">郑纯清：文革还在闹</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/5/22/n7919973.md#1">【热点解读】文革的本质是什么？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/5/17/n7901818.md#1">林保华：我在文革期间的醒悟</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/5/17/n7901818.md#1">林保华：我在文革期间的醒悟</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/5/22/n7919973.md#1">【热点解读】文革的本质是什么？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/6/6/n7969083.md#1">郑纯清：文革还在闹</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/6/10/n7983735.md#1">潘晴：文革红黑俱受毒害 后悔批父亲砸教授</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9971114.md#1" target="_blank">文革中自杀的几个名人（6）留美学者陈梦家</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/16/n11387274.md#1" target="_blank">7-20反迫害 美参众议员致信声援法轮功(1)</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/8/n10202468.md#1" target="_blank">林辉：“爱有阶级性”后的人伦惨剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/5/n3675948.md#1" target="_blank">中共酷刑：对伤口的摧残</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943151.md#1">美专家：中国恢复正常后或爆发新一波疫情</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941216.md#1">【一线采访视频版】封城近50天 武汉人生活困苦</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11944429.md#1">【直播回放】3.16新肺炎追踪：中共瞒疫情在美挨告</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941189.md#1">【一线采访视频版】武汉市民：首先要活下来</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/13/n9393043.htm">中共对知识分子的欺骗（3）文革巨难</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/7/13/n9393043.htm">中共对知识分子的欺骗（3）文革巨难</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/17/7/13/n9393043.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/7/13/n9393043.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
